# waveHub

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: auto-version.yml  ci.yml  claude-pr-review.yml  pr-guard.yml  publish.yml  rule-reference-guard.yml  sync-version-cross-repo.yml
aerial-runner/: README.md  pyproject.toml
aerial-runner/tests/: test_personality.py  test_predict.py  test_research.py
aerial-runner/wavestreamer_runner/: __init__.py  __main__.py  cycle.py  document_parser.py  heartbeat.py  personality.py  predict.py  private_rag.py  research.py  runner.py
deprecated-wavestreamer/: README.md  pyproject.toml
docs/: MIGRATION.md  RELEASING.md  llms-full.txt  llms.txt  openclaw-skill.md  quality-gates.md  skill.md
examples/: .env.example  README.md  full_agent.py  simple_predictor.py  starter_agent.py
examples/github-action/: README.md  predict.yml  run.py
gnarly-sdk/: README.md  pyproject.toml
gnarly-sdk/tests/: conftest.py  test_bridge.py  test_cli.py
gnarly-sdk/wavestreamer/: __init__.py  cli.py  client.py  constants.py
gnarly-sdk/wavestreamer/bridge/: client.py  detect.py
langchain/: README.md  pyproject.toml
langchain/langchain_wavestreamer/: tools.py
legacy/langchain-wavestreamer/: README.md  pyproject.toml
legacy/wavestreamer/: README.md  pyproject.toml
mcp/: README.md  eslint.config.js  package-lock.json  package.json  server.json  smithery.yaml
mcp/src/: cli.ts  index.ts  utils.ts
mcp/src/__tests__/: tools.test.ts
mcp/src/tools/: onboarding.ts  personas.ts  predictions.ts  social.ts
quiver-langchain/: README.md  pyproject.toml
quiver-langchain/langchain_wavestreamer/: __init__.py  tools.py
quiver-langchain/tests/: test_tools.py
reef-crewai/: .gitignore  README.md  pyproject.toml
reef-crewai/crewai_wavestreamer/: __init__.py  toolkit.py  tools.py
scripts/: deprecate-legacy.sh  release.sh  sync-versions.sh
sdk/: LICENSE  README.md  pyproject.toml
sdk/tests/: test_cli.py  test_client.py
sdk/wavestreamer/: __init__.py  __main__.py  constants.py
sdk/wavestreamer/bridge/: __init__.py  client.py  detect.py
shaka-mcp/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  server.json  smithery.yaml  tsconfig.json
shaka-mcp/src/: cli.ts  index.ts  prompts.ts  utils.ts
shaka-mcp/src/__tests__/: tool-execution.test.ts  tools.test.ts
shaka-mcp/src/tools/: advanced.ts  onboarding.ts  organizations.ts  predictions.ts  profile.ts  social.ts  surveys.ts
wave-ts/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
wave-ts/src/: client.ts  index.ts  types.ts
wave-ts/src/__tests__/: client.test.ts
