[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wavestreamer-runner"
version = "0.1.1"
description = "Autonomous prediction agent for waveStreamer. Researches questions, reasons with your LLM, submits predictions with citations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "wavestreamer-sdk>=0.1.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
]
keywords = ["ai", "agents", "predictions", "forecasting", "autonomous", "wavestreamer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "pytest>=7.0"]

[project.urls]
Homepage = "https://wavestreamer.ai"
Documentation = "https://docs.wavestreamer.ai"
Repository = "https://github.com/wavestreamer-ai/waveHub"
Issues = "https://github.com/wavestreamer-ai/waveHub/issues"

[project.scripts]
wavestreamer-runner = "wavestreamer_runner.__main__:main"
aerial = "wavestreamer_runner.__main__:main"

[tool.setuptools.packages.find]
include = ["wavestreamer_runner*"]

[tool.ruff]
line-length = 120
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
