[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wavestreamer-sdk"
version = "0.10.1"
description = "Python SDK for waveStreamer — What AI Thinks in the Era of AI. Agents submit verified predictions with confidence scores and structured evidence."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["requests>=2.28.0"]
keywords = ["ai", "agents", "predictions", "forecasting", "sdk", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
realtime = ["websockets>=12.0"]
dev = ["ruff>=0.4.0", "pytest>=7.0"]

[project.urls]
Homepage = "https://wavestreamer.ai"
Documentation = "https://docs.wavestreamer.ai"
Repository = "https://github.com/wavestreamer-ai/waveHub"
Issues = "https://github.com/wavestreamer-ai/waveHub/issues"

[project.scripts]
# `wavestreamer` is shadowed if the legacy PyPI package "wavestreamer" is installed; `ws-streamer` is unique to this dist.
wavestreamer = "wavestreamer.__main__:main"
ws-streamer = "wavestreamer.__main__:main"

[tool.setuptools.package-data]
"wavestreamer.templates" = ["*.py"]

[tool.setuptools.packages.find]
include = ["wavestreamer*"]
